cd/deployment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funathon-2026-project3-model-deployment
spec:
  replicas: 25
  selector:
    matchLabels:
      app: funathon-2026-project3-model-deployment
  template:
    metadata:
      labels:
        app: funathon-2026-project3-model-deployment
    spec:
      containers:
        - name: funathon-2026-project3-app
          image: rayaberova/funathon-2026-project3:main
          imagePullPolicy: Always
          resources:
            limits:
              memory: "75Gi"
              cpu: "100000m"
            requests:
              memory: "8Gi"
              cpu: "1000m"
