cd/deployment-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funathon-2026-project3-model-ingress
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - funathon-2026-project3-api.lab.sspcloud.fr
  rules:
    - host: funathon-2026-project3-api.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funathon-2026-project3-model-service
                port:
                  number: 8000
